# sentiric-ai-pipeline-sdk

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: clients.rs  config.rs  error.rs  lib.rs  orchestrator.rs
